--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -61,4 +61,11 @@
   justify-content: center;
 
   gap: 0.2rem;
+
+  transition: color 0.1s, background-color 0.1s;
+}
+
+.sidebar footer a:hover {
+  background: var(--green-500);
+  color: var(--white);
 }
