Comment section styles completed

--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -89,8 +89,19 @@
   height: 6rem;
   padding: 1rem;
   border-radius: 8px;
+  color: var(--gray-100);
   line-height: 1.4;
   margin-top: 1rem;
+}
+
+.commentForm footer {
+  visibility: hidden;
+  max-height: 0;
+}
+
+.commentForm:focus-within footer {
+  visibility: visible;
+  max-height: none;
 }
 
 .commentForm button[type=submit] {
@@ -102,7 +113,8 @@
   color: var(--white);
   font-weight: bold;
   cursor: pointer;
-  transition: backgroud-color 1s;
+
+  transition: backgroud-color 0.1s;
 }
 
 .commentForm button[type=submit]:hover {
